SERVER-23223 Sharded planCache[List/Clear/Set]Filter commands should check collection name